test/files/pos/debug-reset-local-attrs.scala
// scalac: -Ydebug
case class FT(f : Float)
