test/files/neg/case-collision-multifile/two.scala
// scalac: -Xfatal-warnings
class hotDog
